# filemagie

./: CMakeLists.txt  README.md
src/: kleb.c  main.c  trenn.c
